Minor changes on docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,8 @@ services:
             - POSTGRES_DB=gitlabdb
 
         networks:
-            - eventos
-        container_name: database_eventos
+            - gitlab
+        container_name: database_gitlab
     web:
       image: 'gitlab/gitlab-ce:latest'
       restart: always
