--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,14 @@
 version: '3.6'
 
-services:    
+services:
+    redis:
+      restart: always
+      image: sameersbn/redis:4.0.9-2
+      command: 
+          - --loglevel warning
+      volumes:
+          - redis-data:/var/lib/redis:Z
+
     db:
       restart: always
       image: launcher.gcr.io/google/postgresql10
@@ -12,13 +20,14 @@ services:
           - POSTGRES_PASSWORD=gitlabadmin
           - POSTGRES_DB=gitlabdb
       container_name: database_gitlab
+  
     web:
       image: 'gitlab/gitlab-ce:latest'
       restart: always
       hostname: localhost
       environment:
         GITLAB_OMNIBUS_CONFIG: |
-          external_url 'https://gitlab.example.com'
+          # external_url 'https://gitlab.example.com'
           gitlab.rb
       ports:
         - '80:80'
