--- a/docker-swarm/stack.yml
+++ b/docker-swarm/stack.yml
@@ -20,6 +20,34 @@ services:
         traefik.port: "80"
         traefik.frontend.rule: "Host:gitlab.localtest.me"
         traefik.docker.network: "proxy"
+
+  redis:
+    image: "redis:4.0.6-alpine"
+  postgres:
+    image: "postgres:10.1-alpine"
+    volumes:
+      - "postgres_data:/data"
+    environment:
+      POSTGRES_USER: gitlab
+      POSTGRES_PASSWORD: gitlab
+      PGDATA: /data
+      POSTGRES_DB: gitlab
+  prometheus:
+    image: "prom/prometheus:v2.0.0"
+    command: "--config.file=/prometheus.yaml --storage.tsdb.path /data"
+    volumes:
+      - "prometheus_data:/data"
+    configs:
+      - prometheus.yaml
+    networks:
+      - default
+      - proxy
+    deploy:
+      labels:
+        traefik.port: 9090
+        traefik.frontend.rule: "Host:prometheus.localtest.me"
+        traefik.docker.network: "proxy"
+
   volumes:
     gitlab_data:
       driver: local
@@ -40,9 +68,25 @@ services:
         o: "addr=127.0.0.1"
         device: ":/gitlab-swarm/gitlab/config"
 
+    postgres_data:
+      driver: local
+      driver_opts:
+        type: nfs4
+        o: "addr=127.0.0.1"
+        device: :/gitlab-swarm/postgres
+    prometheus_data:
+      driver: local
+      driver_opts:
+        type: nfs4
+        o: "addr=127.0.0.1"
+        device: ":/gitlab-swarm/prometheus"
+
   configs:
     gitlab.rb:
       file: "./gitlab.rb"
+    prometheus.yaml:
+      file: "./prometheus.yaml"
+
 
   networks:
     proxy:
