--- a/docker-swarm/grafana.ini
+++ b/docker-swarm/grafana.ini
@@ -1,5 +1,6 @@
 [database]
-path = "/data/grafana.db"
+type=sqlite3
+connection_string=file:data/grafana.db?cache=private&mode=rwc&_journal_mode=WAL
 
 [session]
 provider = "redis"
