--- a/monitoring/ELK/logstash/logstash.conf
+++ b/monitoring/ELK/logstash/logstash.conf
@@ -1,17 +1,15 @@
-input {
+input {    
     syslog {
-	port => 5000
-    }    
+	id => "logs"
+	port => 5114
+    }
     snmp {
-	get => [".1.3.6.1.2.1.1.4.0",".1.3.6.1.2.1.1.5.0"]
-	hosts => [{host => "udp:10.2.0.1" community =>"gicgirs" version=>"2c"}]
+	get => [".1.3.6.1.4.1.2021.11.10.0",".1.3.6.1.4.1.2021.11.11.0",".1.3.6.1.4.1.2021.9.1.9.9",".1.3.6.1.4.1.2021.4.5.0",".1.3.6.1.4.1.2021.4.6.0"]
+	hosts => [{host => "udp:10.2.0.1/161" community =>"gicgirs" version=>"2c"}]
     }
 }
 output {
     elasticsearch {
-        hosts => "localhost:9200"
-	index => "gitlab"
-	user => elastic
-	password => gitlab
+        hosts => "elasticsearch:9200"
     }
 }
